--- a/Android/Android_InvManagement/MyApplication/app/src/main/res/values/strings.xml
+++ b/Android/Android_InvManagement/MyApplication/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="scan">Scan</string>
+    <string name="facebook_app_id">123456908761030</string>
 </resources>
